Modifying to fit problem

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,6 @@
 strict-ssl=false
+registry=https://npm.pkg.github.com/:_authToken=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
+@SlimStampen:registry=https://npm.pkg.github.com/
 registry=https://pkgs.dev.azure.com/infinitas/_packaging/Infinitas/npm/registry/
 @ccs:registry=https://pkgs.dev.azure.com/infinitas/_packaging/CCS/npm/registry/
 always-auth=true
